Fix buggy behavior in character map CSS
Some themes (and some characters in all themes) have a problem with the way I
was using padding, borders, and :hover states, producing weird pixel rounding
errors while overing over links. By using invisible borders instead, I can get
the same effect without the bugs.

--- a/content/css/gamefox-character-map.css
+++ b/content/css/gamefox-character-map.css
@@ -24,6 +24,7 @@
 {
     display: block;
     padding: 9px 5px;
+    border: transparent 1px solid;
     background: #fff;
     text-align: center;
     font-weight: normal !important;
@@ -36,7 +37,6 @@
 {
     text-decoration: none !important;
     background: #eee;
-    border: #aaa 1px solid;
-    padding: 8px 5px;
+    border-color: #aaa;
 }
 }
